Fixed the ranking plot (in the plots.ipynb) that used a deprecated method

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -81,87 +81,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k_eval = pd.read_csv(\"./plot_data/k_quantifier_evaluation_table.csv\")\n",
-    "k_eval = k_eval[k_eval['dataset'] == 'AedesQuinx']\n",
-    "k_eval = k_eval[k_eval['alpha'] == 0.11]\n",
-    "k_eval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantifier</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>sample_size</th>\n",
+       "      <th>sampling_seed</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>pred_prev</th>\n",
+       "      <th>abs_error</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Top-1</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5393</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.221366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Top-1</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8792</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.222180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Top-1</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8433</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.221634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Top-1</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>7513</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.220693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Top-1</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2612</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.221747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40025</th>\n",
+       "      <td>Top-9</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>7041</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.668814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40026</th>\n",
+       "      <td>Top-9</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9555</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>1.669843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40027</th>\n",
+       "      <td>Top-9</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6235</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>1.667040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40028</th>\n",
+       "      <td>Top-9</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5486</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1.691945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40029</th>\n",
+       "      <td>Top-9</td>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>7099</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>1.732108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>110 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "      quantifier     dataset  sample_size  sampling_seed  iteration  alpha  \\\n",
+       "20         Top-1  AedesQuinx          100           5393          1   0.11   \n",
+       "21         Top-1  AedesQuinx          100           8792          2   0.11   \n",
+       "22         Top-1  AedesQuinx          100           8433          3   0.11   \n",
+       "23         Top-1  AedesQuinx          100           7513          4   0.11   \n",
+       "24         Top-1  AedesQuinx          100           2612          5   0.11   \n",
+       "...          ...         ...          ...            ...        ...    ...   \n",
+       "40025      Top-9  AedesQuinx          100           7041          6   0.11   \n",
+       "40026      Top-9  AedesQuinx          100           9555          7   0.11   \n",
+       "40027      Top-9  AedesQuinx          100           6235          8   0.11   \n",
+       "40028      Top-9  AedesQuinx          100           5486          9   0.11   \n",
+       "40029      Top-9  AedesQuinx          100           7099         10   0.11   \n",
+       "\n",
+       "       pred_prev  abs_error  run_time  \n",
+       "20          0.06       0.05  0.221366  \n",
+       "21          0.05       0.06  0.222180  \n",
+       "22          0.14       0.03  0.221634  \n",
+       "23          0.01       0.10  0.220693  \n",
+       "24          0.04       0.07  0.221747  \n",
+       "...          ...        ...       ...  \n",
+       "40025       0.11       0.00  1.668814  \n",
+       "40026       0.06       0.05  1.669843  \n",
+       "40027       0.07       0.04  1.667040  \n",
+       "40028       0.09       0.02  1.691945  \n",
+       "40029       0.17       0.06  1.732108  \n",
+       "\n",
+       "[110 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "seeds = np.load(\"./evaluator_data/seeds.npy\")\n",
+    "import pandas as pd\n",
     "\n",
-    "unique, counts = np.unique(seeds, return_counts=True)\n",
-    "\n",
-    "for i in range(len(counts)):\n",
-    "    if counts[i] > 1:\n",
-    "        print(unique[i], counts[i])\n",
-    "# repeated_values"
+    "k_eval = pd.read_csv(\"./plot_data/k_quantifier_evaluation_table.csv\")\n",
+    "k_eval = k_eval[k_eval['dataset'] == 'AedesQuinx']\n",
+    "k_eval = k_eval[k_eval['alpha'] == 0.11]\n",
+    "k_eval"
    ]
   }
  ],
