--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -130,11 +130,85 @@
     "# test_size=0.2 means 20% of data will go to the test set, 80% to the train set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "k_quantifier_median = KQuantifier(k=-1, method=\"median\")\n",
+    "# k_quantifier_median = KQuantifier(k=-1, method=\"median\")\n",
     "k_quantifier_weighted = KQuantifier(k=-1, method=\"weighted\")\n",
     "\n",
-    "k_quantifier_median.fit(X_train2, y_train2)\n",
-    "k_quantifier_weighted.fit(X_train2, y_train2)"
+    "# k_quantifier_median.fit(X_train2, y_train2)\n",
+    "k_quantifier_weighted.fit(X_train2, y_train2)\n",
+    "ranking = k_quantifier_weighted.predict(X_test2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([['SORD', 0.09768649999999997], ['DyS', 0.10326400000000004], ['HDy', 0.10625849999999999], ['SMM', 0.11894000000000007], ['MAX', 0.13025050000000002], ['X', 0.14941900000000014], ['PCC', 0.2215819999999999], ['MS', 0.25939949999999995], ['ACC', 0.2889729999999999], ['PACC', 0.30836699999999984], ['CC', 0.35671450000000005]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_list = recommender_eval.loc['AedesQuinx']['predicted_ranking_error']\n",
+    "k = 3\n",
+    "error_list\n",
+    "\n",
+    "weight_list = [0.5, 0.3, 0.2]\n",
+    "k_prev = [0.3, 0.26, 0.35]\n",
+    "\n",
+    "final_k_prev = np.sum(np.array(k_prev) * np.array(weight_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.298\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.5 * 0.3 + 0.3 * 0.26 + 0.2 * 0.35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.298)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_k_prev"
    ]
   },
   {
