Tried to optimize further the evaluation method of the KQuantifier(). Not successful.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -134,7 +134,15 @@
     "k_quantifier_weighted = KQuantifier(k=-1, method=\"weighted\")\n",
     "\n",
     "# k_quantifier_median.fit(X_train2, y_train2)\n",
-    "k_quantifier_weighted.fit(X_train2, y_train2)\n",
+    "k_quantifier_weighted.fit(X_train2, y_train2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ranking = k_quantifier_weighted.predict(X_test2)"
    ]
   },
