Implemented a BaseRecommender abstract class. Changed QuantifierRecommender to RegressionRecommender and started implementing the KNNRecommender. Each Recommender must inherit and implement the methods of the BaseRecommender class.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fit QuantifierRecommender and save the resulting Meta-Table"
+    "Fit QuantifierRecommender and save the resulting Meta-Table and Model"
    ]
   },
   {
@@ -13,11 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantifier_recommender import QuantifierRecommender\n",
+    "from regression_recommender import RegressionRecommender\n",
     "\n",
-    "recommender = QuantifierRecommender(supervised=True)\n",
+    "# recommender = RegressionRecommender(supervised=True, _load=False)\n",
     "# recommender.fit(datasets_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
-    "# recommender.save_meta_table(\"./recommender_data/meta_table.h5\")"
+    "# recommender.save_meta_table(\"./recommender_data/meta_table.h5\")\n",
+    "# recommender.persist_model()"
    ]
   },
   {
@@ -29,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantifier_recommender import QuantifierRecommender\n",
+    "from regression_recommender import RegressionRecommender\n",
     "\n",
-    "recommender = QuantifierRecommender(supervised=True)\n",
-    "recommender.load_fit_meta_table(\"./recommender_data/meta_table.h5\")\n",
+    "recommender = RegressionRecommender(supervised=True)\n",
+    "# recommender.load_fit_meta_table(\"./recommender_data/meta_table.h5\")\n",
     "recommender_eval, quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/recommender_evaluation_table.csv\",\n",
     "                                                                          \"./plot_data/quantifiers_evaluation_table.csv\")"
    ]
