Working on the fit() method of the KNNQuantifier

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,155 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from knn_recommender import KNNRecommender\n",
+    "\n",
+    "knn_recommender = KNNRecommender(supervised=True, _load=False)\n",
+    "knn_recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>inv_abs_error</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quantifier</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ACC</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.95540</td>\n",
+       "      <td>0.000282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CC</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.91420</td>\n",
+       "      <td>0.000011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DyS</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.96185</td>\n",
+       "      <td>0.044581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HDy</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.94875</td>\n",
+       "      <td>0.196264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAX</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.95730</td>\n",
+       "      <td>0.000190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MS</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.95955</td>\n",
+       "      <td>0.021148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PACC</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.92375</td>\n",
+       "      <td>0.002801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PCC</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.87625</td>\n",
+       "      <td>0.002469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SMM</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.95925</td>\n",
+       "      <td>0.000143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SORD</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.96060</td>\n",
+       "      <td>1.389139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>X</th>\n",
+       "      <td>AedesQuinx</td>\n",
+       "      <td>0.95625</td>\n",
+       "      <td>0.000319</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               dataset  inv_abs_error  run_time\n",
+       "quantifier                                     \n",
+       "ACC         AedesQuinx        0.95540  0.000282\n",
+       "CC          AedesQuinx        0.91420  0.000011\n",
+       "DyS         AedesQuinx        0.96185  0.044581\n",
+       "HDy         AedesQuinx        0.94875  0.196264\n",
+       "MAX         AedesQuinx        0.95730  0.000190\n",
+       "MS          AedesQuinx        0.95955  0.021148\n",
+       "PACC        AedesQuinx        0.92375  0.002801\n",
+       "PCC         AedesQuinx        0.87625  0.002469\n",
+       "SMM         AedesQuinx        0.95925  0.000143\n",
+       "SORD        AedesQuinx        0.96060  1.389139\n",
+       "X           AedesQuinx        0.95625  0.000319"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "eval_tab = pd.read_csv(\"./eval_table.csv\", index_col=0)\n",
+    "\n",
+    "eval_tab"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +165,7 @@
     "from regression_recommender import RegressionRecommender\n",
     "\n",
     "# recommender = RegressionRecommender(supervised=True, _load=False)\n",
-    "# recommender.fit(datasets_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
+    "# recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
     "# recommender.save_meta_table(\"./recommender_data/meta_table.h5\")\n",
     "# recommender.persist_model()"
    ]
@@ -149,20 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values([['SORD', 0.09768649999999997], ['DyS', 0.10326400000000004], ['HDy', 0.10625849999999999], ['SMM', 0.11894000000000007], ['MAX', 0.13025050000000002], ['X', 0.14941900000000014], ['PCC', 0.2215819999999999], ['MS', 0.25939949999999995], ['ACC', 0.2889729999999999], ['PACC', 0.30836699999999984], ['CC', 0.35671450000000005]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ranking"
    ]
@@ -185,270 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.298\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(0.5 * 0.3 + 0.3 * 0.26 + 0.2 * 0.35)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.298)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_k_prev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEDIAN: 0.492949037167068\n",
-      "WEIGHTED: 0.49361363216148213\n",
-      "TRUE: 0.5008333333333334\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"MEDIAN: {k_quantifier_median.predict(X_test2)}\\nWEIGHTED: {k_quantifier_weighted.predict(X_test2)}\\nTRUE: {sum(y_test2)/len(y_test2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>quantifier</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>sample_size</th>\n",
-       "      <th>sampling_seed</th>\n",
-       "      <th>iteration</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>pred_prev</th>\n",
-       "      <th>abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Top-1</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5393</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.221366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Top-1</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>8792</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.222180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Top-1</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>8433</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.221634</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Top-1</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>7513</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.220693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Top-1</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2612</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.221747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40025</th>\n",
-       "      <td>Top-9</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>7041</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.668814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40026</th>\n",
-       "      <td>Top-9</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>9555</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>1.669843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40027</th>\n",
-       "      <td>Top-9</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>6235</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>1.667040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40028</th>\n",
-       "      <td>Top-9</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5486</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>1.691945</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40029</th>\n",
-       "      <td>Top-9</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>7099</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>1.732108</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>110 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      quantifier     dataset  sample_size  sampling_seed  iteration  alpha  \\\n",
-       "20         Top-1  AedesQuinx          100           5393          1   0.11   \n",
-       "21         Top-1  AedesQuinx          100           8792          2   0.11   \n",
-       "22         Top-1  AedesQuinx          100           8433          3   0.11   \n",
-       "23         Top-1  AedesQuinx          100           7513          4   0.11   \n",
-       "24         Top-1  AedesQuinx          100           2612          5   0.11   \n",
-       "...          ...         ...          ...            ...        ...    ...   \n",
-       "40025      Top-9  AedesQuinx          100           7041          6   0.11   \n",
-       "40026      Top-9  AedesQuinx          100           9555          7   0.11   \n",
-       "40027      Top-9  AedesQuinx          100           6235          8   0.11   \n",
-       "40028      Top-9  AedesQuinx          100           5486          9   0.11   \n",
-       "40029      Top-9  AedesQuinx          100           7099         10   0.11   \n",
-       "\n",
-       "       pred_prev  abs_error  run_time  \n",
-       "20          0.06       0.05  0.221366  \n",
-       "21          0.05       0.06  0.222180  \n",
-       "22          0.14       0.03  0.221634  \n",
-       "23          0.01       0.10  0.220693  \n",
-       "24          0.04       0.07  0.221747  \n",
-       "...          ...        ...       ...  \n",
-       "40025       0.11       0.00  1.668814  \n",
-       "40026       0.06       0.05  1.669843  \n",
-       "40027       0.07       0.04  1.667040  \n",
-       "40028       0.09       0.02  1.691945  \n",
-       "40029       0.17       0.06  1.732108  \n",
-       "\n",
-       "[110 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
