fit() method of the KNNRecommender done. Still needs testing.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,173 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit KNNRecommender and save the resulting Meta-Table and Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from knn_recommender import KNNRecommender\n",
     "\n",
     "knn_recommender = KNNRecommender(supervised=True, _load=False)\n",
-    "knn_recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>inv_abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>quantifier</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>ACC</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.95540</td>\n",
-       "      <td>0.000282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CC</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.91420</td>\n",
-       "      <td>0.000011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DyS</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.96185</td>\n",
-       "      <td>0.044581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HDy</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.94875</td>\n",
-       "      <td>0.196264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MAX</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.95730</td>\n",
-       "      <td>0.000190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MS</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.95955</td>\n",
-       "      <td>0.021148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PACC</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.92375</td>\n",
-       "      <td>0.002801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PCC</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.87625</td>\n",
-       "      <td>0.002469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SMM</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.95925</td>\n",
-       "      <td>0.000143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SORD</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.96060</td>\n",
-       "      <td>1.389139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>X</th>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>0.95625</td>\n",
-       "      <td>0.000319</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               dataset  inv_abs_error  run_time\n",
-       "quantifier                                     \n",
-       "ACC         AedesQuinx        0.95540  0.000282\n",
-       "CC          AedesQuinx        0.91420  0.000011\n",
-       "DyS         AedesQuinx        0.96185  0.044581\n",
-       "HDy         AedesQuinx        0.94875  0.196264\n",
-       "MAX         AedesQuinx        0.95730  0.000190\n",
-       "MS          AedesQuinx        0.95955  0.021148\n",
-       "PACC        AedesQuinx        0.92375  0.002801\n",
-       "PCC         AedesQuinx        0.87625  0.002469\n",
-       "SMM         AedesQuinx        0.95925  0.000143\n",
-       "SORD        AedesQuinx        0.96060  1.389139\n",
-       "X           AedesQuinx        0.95625  0.000319"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
+    "knn_recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
     "\n",
-    "eval_tab = pd.read_csv(\"./eval_table.csv\", index_col=0)\n",
-    "\n",
-    "eval_tab"
+    "knn_recommender.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
+    "knn_recommender.persist_model(\"./recommender_data/KNNRecommender.joblib\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fit QuantifierRecommender and save the resulting Meta-Table and Model"
+    "Fit RegressionRecommender and save the resulting Meta-Table and Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from regression_recommender import RegressionRecommender\n",
     "\n",
-    "# recommender = RegressionRecommender(supervised=True, _load=False)\n",
+    "recommender = RegressionRecommender(supervised=True, _load=False)\n",
     "# recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
-    "# recommender.save_meta_table(\"./recommender_data/meta_table.h5\")\n",
-    "# recommender.persist_model()"
+    "\n",
+    "# recommender.save_meta_table(\"./recommender_data/regression_meta_table.h5\")\n",
+    "# recommender.persist_model(\"./recommender_data/RegressionRecommender.joblib\")"
    ]
   },
   {
@@ -179,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
