--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -37,9 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 1: DyS with Weight: 0.0912292699822285\n",
+      "Top 2: SORD with Weight: 0.09121615578024786\n",
+      "Top 3: MS with Weight: 0.09118933512419261\n",
+      "Full ranking: ('DyS', 'SORD', 'MS', 'SMM', 'MAX', 'X', 'ACC', 'HDy', 'CC', 'PACC', 'PCC')\n",
+      "Sum of weights: 0.9999999999999998\n"
+     ]
+    }
+   ],
    "source": [
     "from knn_recommender import KNNRecommender\n",
     "import pandas as pd\n",
@@ -52,17 +64,15 @@
     "X = df.drop(columns=[\"class\"]).values\n",
     "y = df[\"class\"].values\n",
     "\n",
-    "# Returns a list of tuples: (Quantifier, ARR).\n",
+    "# Returns two tuples: (quantifiers ranking), (quantifiers weight by their ARR).\n",
     "# First quantifier is best, second quantifier is second best, and so on.\n",
-    "quantifier_arr_tuple = recommender.recommend(X, y)\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
     "\n",
-    "# You can unpack the tuple into a ranking of quantifiers and their respective ARRs\n",
-    "quantifiers_ranking, arrs = zip(*quantifier_arr_tuple)\n",
-    "\n",
-    "print(f\"Top 1: {quantifiers_ranking[0]} with ARR: {arrs[0]}\")\n",
-    "print(f\"Top 2: {quantifiers_ranking[1]} with ARR: {arrs[1]}\")\n",
-    "print(f\"Top 3: {quantifiers_ranking[2]} with ARR: {arrs[2]}\")\n",
-    "print(f\"Full ranking: {quantifiers_ranking}\")"
+    "print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
+    "print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
+    "print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
+    "print(f\"Full ranking: {ranking}\")\n",
+    "print(f\"Sum of weights: {sum(weights)}\")"
    ]
   },
   {
@@ -102,9 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 1: SORD with Weight: 0.1556898116026983\n",
+      "Top 2: X with Weight: 0.13255208404701815\n",
+      "Top 3: SMM with Weight: 0.13152383834692327\n",
+      "Full ranking: ('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC')\n",
+      "Sum of weights: 1.0000000000000002\n"
+     ]
+    }
+   ],
    "source": [
     "from regression_recommender import RegressionRecommender\n",
     "import pandas as pd\n",
@@ -117,18 +139,134 @@
     "X = df.drop(columns=[\"class\"]).values\n",
     "y = df[\"class\"].values\n",
     "\n",
-    "# Returns a list of tuples: (quantifier, MAE).\n",
-    "# First quantifier is best, second is second best, and so on.\n",
-    "quantifier_mae_tuple = recommender.recommend(X, y)\n",
+    "# Returns two tuples: (quantifiers ranking), (quantifiers weight by their MAE).\n",
+    "# First quantifier is best, second quantifier is second best, and so on.\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
     "\n",
-    "# You can unpack the tuple into a ranking of quantifiers\n",
-    "# and their respective Median Absolute Errors (MAEs)\n",
-    "quantifiers_ranking, maes = zip(*quantifier_mae_tuple)\n",
+    "print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
+    "print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
+    "print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
+    "print(f\"Full ranking: {ranking}\")\n",
+    "print(f\"Sum of weights: {sum(weights)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EnsembleQuantifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use the resulting ranking from a recommender and feed it to the EnsembleQuantifier.\n",
     "\n",
-    "print(f\"Top 1: {quantifiers_ranking[0]} with MAE: {maes[0]}\")\n",
-    "print(f\"Top 2: {quantifiers_ranking[1]} with MAE: {maes[1]}\")\n",
-    "print(f\"Top 3: {quantifiers_ranking[2]} with MAE: {maes[2]}\")\n",
-    "print(f\"Full ranking: {quantifiers_ranking}\")"
+    "For example, we can recommend a ranking of quantifiers for a dataset and then use an ensemble of the\n",
+    "Top-k quantifiers to get the positive prevalence of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EnsembleQuantifier(ranking=('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC'), weights=[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], method=median)\n",
+      "True prevalence: 0.7630769230769231\n",
+      "Predicted prevalence: 0.76\n",
+      "\n",
+      "EnsembleQuantifier(ranking=('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC'), weights=(np.float64(0.1556898116026983), np.float64(0.13255208404701818), np.float64(0.13152383834692327), np.float64(0.11591094835805989), np.float64(0.11428853307711338), np.float64(0.10866110751828068), np.float64(0.06366978915726007), np.float64(0.048393397778182495), np.float64(0.046386796342616186), np.float64(0.044602061300045154), np.float64(0.03832163247180237)), method=weighted)\n",
+      "True prevalence: 0.7630769230769231\n",
+      "Predicted prevalence: 0.7606429310527548\n",
+      "\n",
+      "EnsembleQuantifier(ranking=('DyS', 'ACC', 'CC'), weights=(np.float64(0.5094317799381599), np.float64(0.2838028728287671), np.float64(0.20676534723307297)), method=weighted)\n",
+      "True prevalence: 0.7630769230769231\n",
+      "Predicted prevalence: 0.76059832484683\n"
+     ]
+    }
+   ],
+   "source": [
+    "from regression_recommender import RegressionRecommender\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Let's load a dataset\n",
+    "df = pd.read_csv(\"./datasets/winetype.csv\")\n",
+    "X = df.drop(columns=[\"class\"]).values\n",
+    "y = df[\"class\"].values\n",
+    "\n",
+    "# Instantiate a RegressionRecommender model\n",
+    "recommender = RegressionRecommender()\n",
+    "\n",
+    "# We can use the recommender to get a ranking of quantifiers\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
+    "\n",
+    "# Let's instantiate an EnsembleQuantifier model\n",
+    "# and pass the ranking and the Top-k quantifiers to it.\n",
+    "# With k = 3, for example.\n",
+    "# Now, when we need to get predictions, an ensemble of the Top-3 will be used.\n",
+    "ensemble_qtf = EnsembleQuantifier(ranking=ranking)\n",
+    "\n",
+    "# Split the data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Fit the ensemble model\n",
+    "ensemble_qtf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the positive prevalence of the test set\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
+    "\n",
+    "# Compare the prediction with the truth\n",
+    "true_prev = np.sum(y_test) / len(y_test)\n",
+    "\n",
+    "print(f\"{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")\n",
+    "\n",
+    "# We can change the method of the EnsembleQuantifier.\n",
+    "# Avaliable methods are the following:\n",
+    "# - \"median\": returns the median of the predictions\n",
+    "# - \"weighted\": returns the weighted average of the predictions\n",
+    "#\n",
+    "# Default is \"median\".\n",
+    "\n",
+    "# Let's use the weighted method and pass the weights to the ensemble model.\n",
+    "ensemble_qtf.method = \"weighted\"\n",
+    "ensemble_qtf.weights = weights\n",
+    "\n",
+    "# Model is already fitted, so we can predict again\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
+    "\n",
+    "print(f\"\\n{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")\n",
+    "\n",
+    "# We can also recommend the top- with k = 3 and pass it to the ensemble model.\n",
+    "ranking, weights = recommender.recommend(X, y, k=3)\n",
+    "\n",
+    "ensemble_qtf.ranking = ranking\n",
+    "ensemble_qtf.weights = weights\n",
+    "\n",
+    "# Model is fitted, so we can just predict\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
+    "\n",
+    "print(f\"\\n{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
    ]
   },
   {
@@ -154,94 +292,6 @@
     "recommender = RegressionRecommender()\n",
     "recommender_eval, quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/regression_recommender_evaluation_table.csv\",\n",
     "                                                                          \"./plot_data/regression_recommender_quantifiers_evaluation_table.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# EnsembleQuantifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can use the resulting ranking from a recommender and feed it to the EnsembleQuantifier.\n",
-    "\n",
-    "For example, we can recommend a ranking of quantifiers for a dataset and then use an ensemble of the\n",
-    "Top-k quantifiers to get the positive prevalence of the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True prevalence: 0.7630769230769231\n",
-      "Predicted prevalence: 0.7609829070181834\n",
-      "\n",
-      "True prevalence: 0.7630769230769231\n",
-      "Predicted prevalence: 0.7619307823411723\n"
-     ]
-    }
-   ],
-   "source": [
-    "from regression_recommender import RegressionRecommender\n",
-    "from ensemble_quantifier import EnsembleQuantifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Let's load a dataset\n",
-    "df = pd.read_csv(\"./datasets/winetype.csv\")\n",
-    "X = df.drop(columns=[\"class\"]).values\n",
-    "y = df[\"class\"].values\n",
-    "\n",
-    "# Instantiate a RegressionRecommender model\n",
-    "recommender = RegressionRecommender()\n",
-    "\n",
-    "# We can use the recommender to get a ranking of quantifiers\n",
-    "ranking = recommender.recommend(X, y)\n",
-    "\n",
-    "# Let's instantiate an EnsembleQuantifier model\n",
-    "# and pass the ranking and the Top-k quantifiers to it.\n",
-    "# With k = 3, for example.\n",
-    "# Now, when we need to get predictions, an ensemble of the Top-3 will be used.\n",
-    "ensemble_qtf = EnsembleQuantifier(ranking=ranking, k=3)\n",
-    "\n",
-    "# Split the data into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "# Fit the ensemble model\n",
-    "ensemble_qtf.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict the positive prevalence of the test set\n",
-    "pred_prev = ensemble_qtf.predict(X_test)\n",
-    "\n",
-    "# Compare the prediction with the truth\n",
-    "true_prev = np.sum(y_test) / len(y_test)\n",
-    "\n",
-    "print(f\"True prevalence: {true_prev}\")\n",
-    "print(f\"Predicted prevalence: {pred_prev}\")\n",
-    "\n",
-    "# We can change the method of the EnsembleQuantifier.\n",
-    "# Avaliable methods are the following:\n",
-    "# - \"median\": returns the median of the predictions\n",
-    "# - \"weighted\": returns the weighted average of the predictions\n",
-    "#\n",
-    "# Default is \"median\".\n",
-    "ensemble_qtf.method = \"weighted\"\n",
-    "\n",
-    "# Model is already fitted, so we can predict again\n",
-    "pred_prev = ensemble_qtf.predict(X_test)\n",
-    "\n",
-    "print(f\"\\nTrue prevalence: {true_prev}\")\n",
-    "print(f\"Predicted prevalence: {pred_prev}\")"
    ]
   },
   {
@@ -468,6 +518,7 @@
     "\n",
     "# We need the recommender evaluation table and the quantifiers evaluation table\n",
     "# generated with the leave_one_out_evaluation method from the RegressionRecommender.\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
     "ensemble_qtf.evaluation(recommender_eval, quantifiers_eval, \"./plot_data/ensemble_quantifier_evaluation_table.csv\")"
    ]
   }
